config/vehicle-ui/vehicle-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vehicle-ui
  labels:
    app.kubernetes.io/part-of: vehicle-ui
spec:
  selector:
    matchLabels:
      app.kubernetes.io/part-of: vehicle-ui
  template:
    metadata:
      annotations:
        prometheus.io/path: /actuator/prometheus
        prometheus.io/port: "8080"
        prometheus.io/scrape: "true"
      labels:
        app.kubernetes.io/part-of: vehicle-ui
    spec:
      containers:
      - name: workload
        image: ghcr.io/making/supply-chain/vehicle-ui-demo
        ports:
        - containerPort: 8080
          protocol: TCP
        securityContext:
          runAsUser: 1000
        livenessProbe:
          httpGet:
            path: /livez
            port: 8080
            scheme: HTTP
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8080
            scheme: HTTP
---
apiVersion: v1
kind: Service
metadata:
  name: vehicle-ui
  labels:
    app.kubernetes.io/part-of: vehicle-ui
spec:
  selector:
    app.kubernetes.io/part-of: vehicle-ui
  ports:
  - targetPort: 8080
    port: 8080
    name: http
